# todomd

./: .gitignore  BACKLOG.md  Cargo.toml  Justfile  NOTES.md  Procfile  README.md  TODO.md  rust-analyzer.toml  test.md
.zed/: settings.json
backend/: Cargo.toml
backend/debug/: Cargo.toml
backend/debug/src/: main.rs
backend/tauri-bin/: Cargo.toml  tauri.conf.json
backend/tauri-bin/src/: lib.rs  main.rs
common/todomd/: Cargo.toml
common/todomd/src/: lib.rs  rangeset.rs
frontend/: Cargo.toml
frontend/leptos-ui/: Cargo.toml  Trunk.toml  styles.css
frontend/leptos-ui/src/: app.rs  main.rs
src/: main.rs  rangeset.rs
