[package]
name = "leptos-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
todomd = { path = "../../common/todomd" }

leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
